--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["sambit <sambitkickers@gmail.com>"]
 python = "^3.8"
 tweepy = "^3.10.0"
 python-dotenv = "^0.18.0"
+google-cloud-pubsub = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
