--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,11 @@ authors = ["sambit <sambitkickers@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-python-dotenv = "^0.18.0"
 google-cloud-pubsub = "^2.6.0"
 loguru = "^0.5.3"
 tweepy = "^3.10.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
+elasticsearch = "^7.13.3"
+geojson_utils = "^0.0.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
